--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -5,11 +5,11 @@
 	grid-gap: 20px 20px;
 }
 .divider.main_menu  {
-	background: var(--secondary-bg-color) url(../img/bread.jpg) no-repeat center center fixed;
+	background: var(--secondary-bg-color) url(../img/Afghan\ flag.jpg) no-repeat center center fixed;
 	background-size: cover;
 }
 .divider.desserts_menu {
-	background: var(--secondary-bg-color) url(../img/cookies.jpg) no-repeat center center fixed;
+	background: var(--secondary-bg-color) url(../img/Afghan\ flag.jpg) no-repeat center center fixed;
 	background-size: cover;
 }
 
